--- a/index.html
+++ b/index.html
@@ -10,67 +10,72 @@
     <header class="header">
       <div class="header__line header__line_first">
         <article class="header__group-geo">
-          <button class="header__btn-geo">
+          <button class="header__btn-geo btn">
             <span
-              class="header__text-with-icon header__text-with-icon_location"
+              class="header__text-with-icon header__text-with-icon_location font-16"
             >
               Магазины
             </span>
           </button>
-          <span class="header__text-with-icon header__text-with-icon_email">
+          <span
+            class="header__text-with-icon header__text-with-icon_email font-16"
+          >
             info@kraskizdes.ru
           </span>
         </article>
         <nav>
           <ul class="header__group-links1">
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">Доставка</a>
+              <a class="link font-16" href="#">Доставка</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">Оплата</a>
+              <a class="link font-16" href="#">Оплата</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">Возврат</a>
+              <a class="link font-16" href="#">Возврат</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">Помощь</a>
+              <a class="link font-16" href="#">Помощь</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">О нас</a>
+              <a class="link font-16" href="#">О нас</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="header__link" href="#">Для бизнеса</a>
+              <a class="link font-16" href="#">Для бизнеса</a>
             </li>
           </ul>
         </nav>
       </div>
       <div class="header__line header__line_second">
         <img src="./assets/icons/shared-icon/logo.svg" class="logo" />
-        <button class="header__btn-catalog">
-          <span class="header__btn-catalog-text">Каталог</span>
+        <button class="header__btn-catalog btn">
+          <span class="header__btn-catalog-text font-18">Каталог</span>
         </button>
         <form class="header__searcher">
-          <input placeholder="Искать товары" class="header__searcher-input" />
-          <button class="header__searcher-btn" type="submit"></button>
+          <input
+            placeholder="Искать товары"
+            class="header__searcher-input font-16"
+          />
+          <button class="header__searcher-btn btn" type="submit"></button>
         </form>
         <ul class="header__group-links2">
           <li>
             <a
-              class="header__link header__text-with-icon header__text-with-icon_profile header__text-with-icon_column"
+              class="link header__text-with-icon header__text-with-icon_profile header__text-with-icon_column font-16"
             >
               Войти
             </a>
           </li>
           <li>
             <a
-              class="header__link header__text-with-icon header__text-with-icon_favorite header__text-with-icon_column"
+              class="link header__text-with-icon header__text-with-icon_favorite header__text-with-icon_column font-16"
             >
               Избранное
             </a>
           </li>
           <li>
             <a
-              class="header__link header__text-with-icon header__text-with-icon_basket header__text-with-icon_column"
+              class="link header__text-with-icon header__text-with-icon_basket header__text-with-icon_column font-16"
             >
               Корзина
             </a>
@@ -81,56 +86,58 @@
         <ul class="header__group-links3">
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_flame"
+              class="link header__text-with-icon header__text-with-icon_flame font-16"
             >
               Акции
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_lable"
+              class="link header__text-with-icon header__text-with-icon_lable font-16"
             >
               Бренды
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_diamond"
+              class="link header__text-with-icon header__text-with-icon_diamond font-16"
             >
               Premium бренды
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_payment"
+              class="link header__text-with-icon header__text-with-icon_payment font-16"
             >
               Подбор по параметрам
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_color"
+              class="link header__text-with-icon header__text-with-icon_color font-16"
             >
               Онлайн -колеровка
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="header__link header__text-with-icon header__text-with-icon_megaphone"
+              class="link header__text-with-icon header__text-with-icon_megaphone font-16"
             >
               Новости компании
             </a>
           </li>
         </ul>
-        <button class="header__btn-phone">
-          <span class="header__text-with-icon header__text-with-icon_phone">
+        <button class="header__btn-phone btn">
+          <span
+            class="header__text-with-icon header__text-with-icon_phone font-18"
+          >
             8 (495) 120-81-55
           </span>
         </button>
       </div>
     </header>
 
-    <main class="main"></main>
+    <!-- <main class="main"></main>
 
     <footer class="footer">
       <div class="footer__content">
@@ -140,7 +147,7 @@
             <img src="./assets/icons/star-icon.svg" />
             <span>5/5</span>
           </div>
-          <button>Написать директору</button>
+          <button class="btn">Написать директору</button>
         </div>
         <div class="footer__second-column">
           <div>
@@ -198,6 +205,6 @@
       <p class="footer__signature">
         © 2023 Интернет-магазин лакокрасочной продукции
       </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
