refactor/to scss

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <title>Test-case</title>
   </head>
   <body class="body">
@@ -12,36 +12,34 @@
         <article class="header__group-geo">
           <button class="header__btn-geo btn">
             <span
-              class="header__text-with-icon header__text-with-icon_location font-16"
+              class="header__text-with-icon header__text-with-icon_location"
             >
               Магазины
             </span>
           </button>
-          <span
-            class="header__text-with-icon header__text-with-icon_email font-16"
-          >
+          <span class="header__text-with-icon header__text-with-icon_email">
             info@kraskizdes.ru
           </span>
         </article>
         <nav>
           <ul class="header__group-links1">
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">Доставка</a>
+              <a class="link" href="#">Доставка</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">Оплата</a>
+              <a class="link" href="#">Оплата</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">Возврат</a>
+              <a class="link" href="#">Возврат</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">Помощь</a>
+              <a class="link" href="#">Помощь</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">О нас</a>
+              <a class="link" href="#">О нас</a>
             </li>
             <li class="header__group-links1-element">
-              <a class="link font-16" href="#">Для бизнеса</a>
+              <a class="link" href="#">Для бизнеса</a>
             </li>
           </ul>
         </nav>
@@ -49,33 +47,30 @@
       <div class="header__line header__line_second">
         <img src="./assets/icons/shared-icon/logo.svg" class="logo" />
         <button class="header__btn-catalog btn">
-          <span class="header__btn-catalog-text font-18">Каталог</span>
+          <span class="header__btn-catalog-text">Каталог</span>
         </button>
         <form class="header__searcher">
-          <input
-            placeholder="Искать товары"
-            class="header__searcher-input font-16"
-          />
+          <input placeholder="Искать товары" class="header__searcher-input" />
           <button class="header__searcher-btn btn" type="submit"></button>
         </form>
         <ul class="header__group-links2">
           <li>
             <a
-              class="link header__text-with-icon header__text-with-icon_profile header__text-with-icon_column font-16"
+              class="link header__text-with-icon header__text-with-icon_profile header__text-with-icon_column"
             >
               Войти
             </a>
           </li>
           <li>
             <a
-              class="link header__text-with-icon header__text-with-icon_favorite header__text-with-icon_column font-16"
+              class="link header__text-with-icon header__text-with-icon_favorite header__text-with-icon_column"
             >
               Избранное
             </a>
           </li>
           <li>
             <a
-              class="link header__text-with-icon header__text-with-icon_basket header__text-with-icon_column font-16"
+              class="link header__text-with-icon header__text-with-icon_basket header__text-with-icon_column"
             >
               Корзина
             </a>
@@ -85,126 +80,129 @@
       <div class="header__line header__line_third">
         <ul class="header__group-links3">
           <li class="header__group-links3-element">
-            <a
-              class="link header__text-with-icon header__text-with-icon_flame font-16"
-            >
+            <a class="link header__text-with-icon header__text-with-icon_flame">
               Акции
             </a>
           </li>
           <li class="header__group-links3-element">
-            <a
-              class="link header__text-with-icon header__text-with-icon_lable font-16"
-            >
+            <a class="link header__text-with-icon header__text-with-icon_lable">
               Бренды
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="link header__text-with-icon header__text-with-icon_diamond font-16"
+              class="link header__text-with-icon header__text-with-icon_diamond"
             >
               Premium бренды
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="link header__text-with-icon header__text-with-icon_payment font-16"
+              class="link header__text-with-icon header__text-with-icon_payment"
             >
               Подбор по параметрам
             </a>
           </li>
           <li class="header__group-links3-element">
-            <a
-              class="link header__text-with-icon header__text-with-icon_color font-16"
-            >
+            <a class="link header__text-with-icon header__text-with-icon_color">
               Онлайн -колеровка
             </a>
           </li>
           <li class="header__group-links3-element">
             <a
-              class="link header__text-with-icon header__text-with-icon_megaphone font-16"
+              class="link header__text-with-icon header__text-with-icon_megaphone"
             >
               Новости компании
             </a>
           </li>
         </ul>
         <button class="header__btn-phone btn">
-          <span
-            class="header__text-with-icon header__text-with-icon_phone font-18"
-          >
+          <span class="header__text-with-icon header__text-with-icon_phone">
             8 (495) 120-81-55
           </span>
         </button>
       </div>
     </header>
 
-    <!-- <main class="main"></main>
+    <main class="main"></main>
 
     <footer class="footer">
       <div class="footer__content">
-        <div class="footer__first-column">
-          <img src="./assets/icons/logo.svg" />
-          <div>
-            <img src="./assets/icons/star-icon.svg" />
-            <span>5/5</span>
+        <div class="footer__column footer__column_first">
+          <img src="./assets/icons/shared-icon/logo.svg" class="logo" />
+          <div class="footer__group-rate">
+            <span class="footer__text-with-icon footer__text-with-icon_rate">
+              5/5
+            </span>
+            <button class="btn footer__btn-msg-dir" type="submit">
+              Написать директору
+            </button>
           </div>
-          <button class="btn">Написать директору</button>
         </div>
-        <div class="footer__second-column">
-          <div>
-            <p>Телефон</p>
-            <p>8 (495) 120-81-55</p>
+        <div class="footer__column footer__column_second">
+          <div class="footer__group-contact">
+            <p class="footer__column-title">Телефон</p>
+            <p class="footer__text">8 (495) 120-81-55</p>
+          </div>
+          <div class="footer__group-contact">
+            <p class="footer__column-title">Электронная почта</p>
+            <p class="footer__text">info@kraskizdes.ru</p>
           </div>
           <div>
-            <p>Электронная почта</p>
-            <p>info@kraskizdes.ru</p>
+            <img src="./assets/icons/footer-icon/vk-icon.svg" />
+            <img src="./assets/icons/footer-icon/youtube-icon.svg" />
           </div>
-          <div>
-            <img src="./assets/icons/vk-icon.svg" />
-            <img src="./assets/icons/youtube-icon.svg" />
-          </div>
-          <img src="./assets/icons/pay-icons.svg" />
+          <img src="./assets/icons/footer-icon/pay-icons.svg" />
         </div>
-        <div class="footer__third-column">
-          <p>О компании</p>
+        <div class="footer__column footer__column_third">
+          <p class="footer__column-title">О компании</p>
           <ul>
-            <li>О нас</li>
-            <li>Бренды</li>
-            <li>Вакансии</li>
-            <li>Для бизнеса</li>
-            <li>Магазины</li>
-            <li>Оплата</li>
-            <li>Доставка</li>
-            <li>Акции</li>
-            <li>Помощь</li>
+            <li class="footer__text">О нас</li>
+            <li class="footer__text">Бренды</li>
+            <li class="footer__text">Вакансии</li>
+            <li class="footer__text">Для бизнеса</li>
+            <li class="footer__text">Магазины</li>
+            <li class="footer__text">Оплата</li>
+            <li class="footer__text">Доставка</li>
+            <li class="footer__text">Акции</li>
+            <li class="footer__text">Помощь</li>
           </ul>
         </div>
-        <div class="footer__fourth-column">
-          <p>Каталог</p>
+        <div class="footer__column footer__column_fourth">
+          <p class="footer__column-title">Каталог</p>
           <ul>
-            <li>Спецпредложение</li>
-            <li>Краски для внутренних работ</li>
-            <li>Краски для наружных работ</li>
-            <li>Краски универсальные</li>
-            <li>Краски специального назначения</li>
-            <li>Антисептики, пропитки, лазури для дерева и камня</li>
-            <li>Лаки, масла, воски</li>
-            <li>Грунтовки</li>
-            <li>Декоративные штукатурки, фактурные краски</li>
-            <li>Декоративные дизайнерские краски</li>
-            <li>Монтажные пены и очистители</li>
-            <li>Клея, герметики, гидроизоляция</li>
-            <li>Затирки, сухие смеси</li>
-            <li>Растворители и очистители, спецсредства</li>
-            <li>Малярные инструменты, краскопульты</li>
-            <li>Морилки по дереву</li>
-            <li>Стеклообои, малярный флизелин, обои под покраску</li>
-            <li>Каталоги цветов, колеровочные карты</li>
+            <li class="footer__text">Спецпредложение</li>
+            <li class="footer__text">Краски для внутренних работ</li>
+            <li class="footer__text">Краски для наружных работ</li>
+            <li class="footer__text">Краски универсальные</li>
+            <li class="footer__text">Краски специального назначения</li>
+            <li class="footer__text">
+              Антисептики, пропитки, лазури для дерева и камня
+            </li>
+            <li class="footer__text">Лаки, масла, воски</li>
+            <li class="footer__text">Грунтовки</li>
+            <li class="footer__text">
+              Декоративные штукатурки, фактурные краски
+            </li>
+            <li class="footer__text">Декоративные дизайнерские краски</li>
+            <li class="footer__text">Монтажные пены и очистители</li>
+            <li class="footer__text">Клея, герметики, гидроизоляция</li>
+            <li class="footer__text">Затирки, сухие смеси</li>
+            <li class="footer__text">
+              Растворители и очистители, спецсредства
+            </li>
+            <li class="footer__text">Малярные инструменты, краскопульты</li>
+            <li class="footer__text">Морилки по дереву</li>
+            <li class="footer__text">
+              Стеклообои, малярный флизелин, обои под покраску
+            </li>
+            <li class="footer__text">Каталоги цветов, колеровочные карты</li>
           </ul>
         </div>
       </div>
       <p class="footer__signature">
         © 2023 Интернет-магазин лакокрасочной продукции
       </p>
-    </footer> -->
+    </footer>
   </body>
 </html>
