style/добавить основные стили footer

--- a/index.html
+++ b/index.html
@@ -129,9 +129,14 @@
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__column footer__column_first">
-          <img src="./assets/icons/shared-icon/logo.svg" class="logo" />
+          <img
+            src="./assets/icons/shared-icon/logo.svg"
+            class="logo footer__logo-container"
+          />
           <div class="footer__group-rate">
-            <span class="footer__text-with-icon footer__text-with-icon_rate">
+            <span
+              class="footer__column-title footer__text-with-icon footer__text-with-icon_rate"
+            >
               5/5
             </span>
             <button class="btn footer__btn-msg-dir" type="submit">
@@ -140,63 +145,87 @@
           </div>
         </div>
         <div class="footer__column footer__column_second">
-          <div class="footer__group-contact">
-            <p class="footer__column-title">Телефон</p>
-            <p class="footer__text">8 (495) 120-81-55</p>
-          </div>
-          <div class="footer__group-contact">
-            <p class="footer__column-title">Электронная почта</p>
-            <p class="footer__text">info@kraskizdes.ru</p>
-          </div>
-          <div>
-            <img src="./assets/icons/footer-icon/vk-icon.svg" />
-            <img src="./assets/icons/footer-icon/youtube-icon.svg" />
+          <div class="footer__group">
+            <div class="footer__group-contact">
+              <p class="footer__column-title">Телефон</p>
+              <p class="footer__text">8 (495) 120-81-55</p>
+            </div>
+            <div class="footer__group-contact">
+              <p class="footer__column-title">Электронная почта</p>
+              <p class="footer__text">info@kraskizdes.ru</p>
+            </div>
+            <div>
+              <img src="./assets/icons/footer-icon/vk-icon.svg" />
+              <img src="./assets/icons/footer-icon/youtube-icon.svg" />
+            </div>
           </div>
           <img src="./assets/icons/footer-icon/pay-icons.svg" />
         </div>
         <div class="footer__column footer__column_third">
           <p class="footer__column-title">О компании</p>
-          <ul>
-            <li class="footer__text">О нас</li>
-            <li class="footer__text">Бренды</li>
-            <li class="footer__text">Вакансии</li>
-            <li class="footer__text">Для бизнеса</li>
-            <li class="footer__text">Магазины</li>
-            <li class="footer__text">Оплата</li>
-            <li class="footer__text">Доставка</li>
-            <li class="footer__text">Акции</li>
-            <li class="footer__text">Помощь</li>
+          <ul class="footer__list">
+            <li class="footer__text footer__list-element">О нас</li>
+            <li class="footer__text footer__list-element">Бренды</li>
+            <li class="footer__text footer__list-element">Вакансии</li>
+            <li class="footer__text footer__list-element">Для бизнеса</li>
+            <li class="footer__text footer__list-element">Магазины</li>
+            <li class="footer__text footer__list-element">Оплата</li>
+            <li class="footer__text footer__list-element">Доставка</li>
+            <li class="footer__text footer__list-element">Акции</li>
+            <li class="footer__text footer__list-element">Помощь</li>
           </ul>
         </div>
         <div class="footer__column footer__column_fourth">
           <p class="footer__column-title">Каталог</p>
-          <ul>
-            <li class="footer__text">Спецпредложение</li>
-            <li class="footer__text">Краски для внутренних работ</li>
-            <li class="footer__text">Краски для наружных работ</li>
-            <li class="footer__text">Краски универсальные</li>
-            <li class="footer__text">Краски специального назначения</li>
-            <li class="footer__text">
+          <ul class="footer__list">
+            <li class="footer__text footer__list-element">Спецпредложение</li>
+            <li class="footer__text footer__list-element">
+              Краски для внутренних работ
+            </li>
+            <li class="footer__text footer__list-element">
+              Краски для наружных работ
+            </li>
+            <li class="footer__text footer__list-element">
+              Краски универсальные
+            </li>
+            <li class="footer__text footer__list-element">
+              Краски специального назначения
+            </li>
+            <li class="footer__text footer__list-element">
               Антисептики, пропитки, лазури для дерева и камня
             </li>
-            <li class="footer__text">Лаки, масла, воски</li>
-            <li class="footer__text">Грунтовки</li>
-            <li class="footer__text">
+            <li class="footer__text footer__list-element">
+              Лаки, масла, воски
+            </li>
+            <li class="footer__text footer__list-element">Грунтовки</li>
+            <li class="footer__text footer__list-element">
               Декоративные штукатурки, фактурные краски
             </li>
-            <li class="footer__text">Декоративные дизайнерские краски</li>
-            <li class="footer__text">Монтажные пены и очистители</li>
-            <li class="footer__text">Клея, герметики, гидроизоляция</li>
-            <li class="footer__text">Затирки, сухие смеси</li>
-            <li class="footer__text">
+            <li class="footer__text footer__list-element">
+              Декоративные дизайнерские краски
+            </li>
+            <li class="footer__text footer__list-element">
+              Монтажные пены и очистители
+            </li>
+            <li class="footer__text footer__list-element">
+              Клея, герметики, гидроизоляция
+            </li>
+            <li class="footer__text footer__list-element">
+              Затирки, сухие смеси
+            </li>
+            <li class="footer__text footer__list-element">
               Растворители и очистители, спецсредства
             </li>
-            <li class="footer__text">Малярные инструменты, краскопульты</li>
-            <li class="footer__text">Морилки по дереву</li>
-            <li class="footer__text">
+            <li class="footer__text footer__list-element">
+              Малярные инструменты, краскопульты
+            </li>
+            <li class="footer__text footer__list-element">Морилки по дереву</li>
+            <li class="footer__text footer__list-element">
               Стеклообои, малярный флизелин, обои под покраску
             </li>
-            <li class="footer__text">Каталоги цветов, колеровочные карты</li>
+            <li class="footer__text footer__list-element">
+              Каталоги цветов, колеровочные карты
+            </li>
           </ul>
         </div>
       </div>
