style/исправить footer под макет

--- a/index.html
+++ b/index.html
@@ -177,56 +177,62 @@
         </div>
         <div class="footer__column footer__column_fourth">
           <p class="footer__column-title">Каталог</p>
-          <ul class="footer__list">
-            <li class="footer__text footer__list-element">Спецпредложение</li>
-            <li class="footer__text footer__list-element">
-              Краски для внутренних работ
-            </li>
-            <li class="footer__text footer__list-element">
-              Краски для наружных работ
-            </li>
-            <li class="footer__text footer__list-element">
-              Краски универсальные
-            </li>
-            <li class="footer__text footer__list-element">
-              Краски специального назначения
-            </li>
-            <li class="footer__text footer__list-element">
-              Антисептики, пропитки, лазури для дерева и камня
-            </li>
-            <li class="footer__text footer__list-element">
-              Лаки, масла, воски
-            </li>
-            <li class="footer__text footer__list-element">Грунтовки</li>
-            <li class="footer__text footer__list-element">
-              Декоративные штукатурки, фактурные краски
-            </li>
-            <li class="footer__text footer__list-element">
-              Декоративные дизайнерские краски
-            </li>
-            <li class="footer__text footer__list-element">
-              Монтажные пены и очистители
-            </li>
-            <li class="footer__text footer__list-element">
-              Клея, герметики, гидроизоляция
-            </li>
-            <li class="footer__text footer__list-element">
-              Затирки, сухие смеси
-            </li>
-            <li class="footer__text footer__list-element">
-              Растворители и очистители, спецсредства
-            </li>
-            <li class="footer__text footer__list-element">
-              Малярные инструменты, краскопульты
-            </li>
-            <li class="footer__text footer__list-element">Морилки по дереву</li>
-            <li class="footer__text footer__list-element">
-              Стеклообои, малярный флизелин, обои под покраску
-            </li>
-            <li class="footer__text footer__list-element">
-              Каталоги цветов, колеровочные карты
-            </li>
-          </ul>
+          <div class="footer__catalog-group">
+            <ul class="footer__list footer__list_catalog1">
+              <li class="footer__text footer__list-element">Спецпредложение</li>
+              <li class="footer__text footer__list-element">
+                Краски для внутренних работ
+              </li>
+              <li class="footer__text footer__list-element">
+                Краски для наружных работ
+              </li>
+              <li class="footer__text footer__list-element">
+                Краски универсальные
+              </li>
+              <li class="footer__text footer__list-element">
+                Краски специального назначения
+              </li>
+              <li class="footer__text footer__list-element">
+                Антисептики, пропитки, лазури для дерева и камня
+              </li>
+              <li class="footer__text footer__list-element">
+                Лаки, масла, воски
+              </li>
+              <li class="footer__text footer__list-element">Грунтовки</li>
+              <li class="footer__text footer__list-element">
+                Декоративные штукатурки, фактурные краски
+              </li>
+            </ul>
+            <ul class="footer__list footer__list_catalog2">
+              <li class="footer__text footer__list-element">
+                Декоративные дизайнерские краски
+              </li>
+              <li class="footer__text footer__list-element">
+                Монтажные пены и очистители
+              </li>
+              <li class="footer__text footer__list-element">
+                Клея, герметики, гидроизоляция
+              </li>
+              <li class="footer__text footer__list-element">
+                Затирки, сухие смеси
+              </li>
+              <li class="footer__text footer__list-element">
+                Растворители и очистители, спецсредства
+              </li>
+              <li class="footer__text footer__list-element">
+                Малярные инструменты, краскопульты
+              </li>
+              <li class="footer__text footer__list-element">
+                Морилки по дереву
+              </li>
+              <li class="footer__text footer__list-element">
+                Стеклообои, малярный флизелин, обои под покраску
+              </li>
+              <li class="footer__text footer__list-element">
+                Каталоги цветов, колеровочные карты
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <p class="footer__signature">
